Revert "Merge branch 'raas' of https://github.com/Mobicents/RestComm into raas"
This reverts commit 881856e1ebf4b589a51cdddc0170793bf680ce96, reversing
changes made to 6c60754e2bcb26abbb14507fc02d61d678ae83d5.